--- a/elcarto/elcartografo2/pom.xml
+++ b/elcarto/elcartografo2/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>elcartografo2</name>
+    <name>elcartografo2_shido</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
